1. Adjust mdpi composing text size. 2. Add preference settings to turn off fetching Chinese symbols when no suggestions present.

--- a/limehd/res/values-land-hdpi/dimens.xml
+++ b/limehd/res/values-land-hdpi/dimens.xml
@@ -24,4 +24,5 @@
     <dimen name="candidate_font_size">32sp</dimen>
     <dimen name="candidate_number_font_size">16sp</dimen>
     <dimen name="candidate_vertical_padding">6sp</dimen>
+    <dimen name="composing_text_size">14sp</dimen>
 </resources>
