--- a/limehd/res/values-hdpi/dimens.xml
+++ b/limehd/res/values-hdpi/dimens.xml
@@ -22,5 +22,5 @@
     <dimen name="candidate_stripe_height">34sp</dimen>
     <dimen name="candidate_font_size">30sp</dimen>
     <dimen name="candidate_number_font_size">15sp</dimen>
-    
+    <dimen name="composing_text_size">12sp</dimen>
 </resources>
