--- a/limehd/res/xml/lime_phonetic_shift.xml
+++ b/limehd/res/xml/lime_phonetic_shift.xml
@@ -31,8 +31,7 @@
 
     
     <Row>
-    	<Key limehd:codes="33" limehd:keyLabel="!\nㄅ" 
-			 limehd:keyEdgeFlags="left" />
+    	<Key limehd:codes="33" limehd:keyLabel="!\nㄅ"  limehd:keyEdgeFlags="left" />
 		<Key limehd:codes="64" limehd:keyLabel="\@\nㄉ" />
 		<Key limehd:codes="35" limehd:keyLabel="\#\nˇ" />
 		<Key limehd:codes="36" limehd:keyLabel="$\nˋ" />
@@ -92,7 +91,7 @@
 			limehd:keyWidth="15%p" limehd:isModifier="true" limehd:isSticky="true" />
         <Key limehd:codes="-9" limehd:keyIcon="@drawable/sw" limehd:isModifier="true"  limehd:iconPreview="@drawable/sw_l"/>
         <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space_lime" limehd:iconPreview="@drawable/sym_keyboard_feedback_space"  limehd:keyWidth="20%p" limehd:isRepeatable="true"/>
-        <Key limehd:codes="61" limehd:keyLabel="=\nㄦ"/>
+        <Key limehd:codes="95" limehd:keyLabel="_\nㄦ"/>
         <Key limehd:codes="-5" limehd:keyWidth="15%p" limehd:keyIcon="@drawable/sym_keyboard_delete" limehd:iconPreview="@drawable/sym_keyboard_feedback_delete" limehd:isModifier="true" limehd:isRepeatable="true"/>
         <Key limehd:codes="10" limehd:keyIcon="@drawable/sym_keyboard_return" limehd:iconPreview="@drawable/sym_keyboard_feedback_return" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="right"/>
     </Row>
