--- a/trunk/limehd/res/xml/lime_et_41.xml
+++ b/trunk/limehd/res/xml/lime_et_41.xml
@@ -44,7 +44,7 @@
 		<Key limehd:codes="101" limehd:keyLabel="e\n一" />
 		<Key limehd:codes="114" limehd:keyLabel="r\nㄜ" />
 		<Key limehd:codes="116" limehd:keyLabel="t\nㄊ" />
-		<Key limehd:codes="121" limehd:keyLabel="y.\nㄡ" />
+		<Key limehd:codes="121" limehd:keyLabel="y\nㄡ" />
 		<Key limehd:codes="117" limehd:keyLabel="u\nㄩ" />
 		<Key limehd:codes="105" limehd:keyLabel="i\nㄞ" />
 		<Key limehd:codes="111" limehd:keyLabel="o\nㄛ" />
