--- a/limehd/res/xml/lime_et_41_shift.xml
+++ b/limehd/res/xml/lime_et_41_shift.xml
@@ -45,7 +45,7 @@
 		<Key limehd:codes="69" limehd:keyLabel="E\n一" />
 		<Key limehd:codes="82" limehd:keyLabel="R\nㄜ" />
 		<Key limehd:codes="84" limehd:keyLabel="T\nㄊ" />
-		<Key limehd:codes="89" limehd:keyLabel="Y.\nㄡ" />
+		<Key limehd:codes="89" limehd:keyLabel="Y\nㄡ" />
 		<Key limehd:codes="85" limehd:keyLabel="U\nㄩ" />
 		<Key limehd:codes="73" limehd:keyLabel="I\nㄞ" />
 		<Key limehd:codes="79" limehd:keyLabel="O\nㄛ" />
