--- a/trunk/limehd/res/values-large-land/dimens.xml
+++ b/trunk/limehd/res/values-large-land/dimens.xml
@@ -19,14 +19,15 @@
 -->
 
 <resources>
-    <dimen name="key_height">56dip</dimen>
+    <dimen name="key_height">46dip</dimen>
     <dimen name="candidate_stripe_height">38sp</dimen>
     <dimen name="candidate_font_size">32sp</dimen>
     <dimen name="candidate_number_font_size">16sp</dimen>
     <dimen name="candidate_vertical_padding">6sp</dimen>
-    <dimen name="key_text_size">32dip</dimen>
-    <dimen name="label_text_size">24dip</dimen>
-     <dimen name="composing_text_size">24sp</dimen>
-   
-
-</resources>
+    <dimen name="key_text_size">26dp</dimen>
+    <dimen name="label_text_size">22dp</dimen>
+    <dimen name="sub_label_text_size">22dp</dimen>
+    <dimen name="small_label_text_size">24dp</dimen>
+    <dimen name="composing_text_size">14sp</dimen>
+        <dimen name="key_preview_height">50dp</dimen>
+   </resources>
