--- a/trunk/limehd/res/values-large-land/dimens.xml
+++ b/trunk/limehd/res/values-large-land/dimens.xml
@@ -20,6 +20,7 @@
 
 <resources>
     <dimen name="key_height">46dip</dimen>
+    <dimen name="phone_key_height">50dip</dimen>
     <dimen name="candidate_stripe_height">38sp</dimen>
     <dimen name="candidate_font_size">32sp</dimen>
     <dimen name="candidate_number_font_size">16sp</dimen>
@@ -29,5 +30,5 @@
     <dimen name="sub_label_text_size">22dp</dimen>
     <dimen name="small_label_text_size">24dp</dimen>
     <dimen name="composing_text_size">14sp</dimen>
-        <dimen name="key_preview_height">50dp</dimen>
+    <dimen name="key_preview_height">66dp</dimen>
    </resources>
