!!BIG MOVE!!  NEED TO RELOAD MAPPING FILE TO BE EFFECTIVE 1. Upgrade hanconvert.db to hanconvertv2.db and store word frequency in TSSC table. 2. Store relatedlist only in highest score record for the same code, and sort the relatedlist with base score got from hanconvert2.db.  (on Mapping file loading and learning). 3. Deprecated loadFile() and use loadFileV2 instead. 4. Use onUpgrade() and setVersion() to do db upgrade. 5. Upgrade dbversion to 68 6. The two INIT DB button are now one button in one row. Will add the third option to load phonetic only db late. 7. Move hanConverter functions from searchService to LIMEDB and add getBaseScore() function.

--- a/limehd/res/layout/initial.xml
+++ b/limehd/res/layout/initial.xml
@@ -11,7 +11,7 @@
 			<TableLayout android:id="@+id/tableLayout1"
 				android:layout_height="fill_parent" android:layout_width="fill_parent">
 				
-				<TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content"
+				<TableRow android:id="@+id/tableRow1" android:layout_width="wrap_content"
 					android:layout_height="wrap_content">
 
 					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
@@ -21,17 +21,20 @@
 						android:layout_height="wrap_content" android:text="@string/l3_initial_btn_store_sdcard"
 						android:id="@+id/btnStoreSdcard" android:padding="5px"></Button>
 				</TableRow>
-				<TableRow android:id="@+id/tableRow3"
+				<TableRow android:id="@+id/tableRow2"
 					android:layout_height="wrap_content" android:layout_width="fill_parent">
 					
 					<Button android:layout_width="fill_parent" android:padding="5px" android:layout_weight="1" android:layout_margin="5px"
 						android:layout_height="fill_parent" android:text="@string/l3_initial_btn_load_preload_db"
 						android:id="@+id/btnInitPreloadDB"></Button>
+				</TableRow>
+				<TableRow android:id="@+id/tableRow3"
+					android:layout_height="wrap_content" android:layout_width="fill_parent">
 					<Button android:layout_width="fill_parent" android:padding="5px" android:layout_weight="1" android:layout_margin="5px"
 						android:layout_height="fill_parent" android:text="@string/l3_initial_btn_load_empty_db"
 						android:id="@+id/btnInitEmptyDB"></Button>
 				</TableRow>
-				<TableRow android:id="@+id/tableRow1"
+				<TableRow android:id="@+id/tableRow4"
 					android:layout_height="wrap_content" android:layout_width="fill_parent">
 
 					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
@@ -41,7 +44,7 @@
 						android:layout_height="fill_parent" android:enabled="false"
 						android:padding="5px"></Button>
 				</TableRow>
-				<TableRow android:id="@+id/tableRow4" android:layout_width="wrap_content"
+				<TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content"
 					android:layout_height="wrap_content">
 
 					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
