1.Bug fixed on escape of single quote in LIMEDB 2.Add phonetic only db option in initial page.

--- a/limehd/res/layout/initial.xml
+++ b/limehd/res/layout/initial.xml
@@ -22,29 +22,34 @@
 						android:id="@+id/btnStoreSdcard" android:padding="5px"></Button>
 				</TableRow>
 				<TableRow android:id="@+id/tableRow2"
-					android:layout_height="wrap_content" android:layout_width="fill_parent">
-					
+					android:layout_height="wrap_content" android:layout_width="fill_parent">			
 					<Button android:layout_width="fill_parent" android:padding="5px" android:layout_weight="1" android:layout_margin="5px"
 						android:layout_height="fill_parent" android:text="@string/l3_initial_btn_load_preload_db"
 						android:id="@+id/btnInitPreloadDB"></Button>
 				</TableRow>
 				<TableRow android:id="@+id/tableRow3"
+					android:layout_height="wrap_content" android:layout_width="fill_parent">			
+					<Button android:layout_width="fill_parent" android:padding="5px" android:layout_weight="1" android:layout_margin="5px"
+						android:layout_height="fill_parent" android:text="@string/l3_initial_btn_load_phonetic_only_db"
+						android:id="@+id/btnInitPhoneticOnlyDB"></Button>
+				</TableRow>
+				<TableRow android:id="@+id/tableRow4"
 					android:layout_height="wrap_content" android:layout_width="fill_parent">
 					<Button android:layout_width="fill_parent" android:padding="5px" android:layout_weight="1" android:layout_margin="5px"
 						android:layout_height="fill_parent" android:text="@string/l3_initial_btn_load_empty_db"
 						android:id="@+id/btnInitEmptyDB"></Button>
 				</TableRow>
-				<TableRow android:id="@+id/tableRow4"
+				<TableRow android:id="@+id/tableRow5"
 					android:layout_height="wrap_content" android:layout_width="fill_parent">
 
 					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
 						android:layout_height="fill_parent" android:id="@+id/btnResetDB"
 						android:text="@string/l3_initial_btn_reset_db" android:padding="5px"></Button>
-					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
-						android:layout_height="fill_parent" android:enabled="false"
-						android:padding="5px"></Button>
+<!-- 					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px" -->
+<!-- 						android:layout_height="fill_parent" android:enabled="false" -->
+<!-- 						android:padding="5px"></Button> -->
 				</TableRow>
-				<TableRow android:id="@+id/tableRow5" android:layout_width="wrap_content"
+				<TableRow android:id="@+id/tableRow6" android:layout_width="wrap_content"
 					android:layout_height="wrap_content">
 
 					<Button android:layout_width="fill_parent" android:layout_weight="1" android:layout_margin="5px"
