--- a/limehd/res/values/dimens.xml
+++ b/limehd/res/values/dimens.xml
@@ -44,4 +44,9 @@
     <dimen name="key_preview_text_size_large">40sp</dimen>
     <dimen name="key_preview_offset">0.000in</dimen>
     <dimen name="key_bottom_gap">0.035in</dimen>
+    
+    <!-- WB -->
+    <dimen name="wb_key_height">72dip</dimen>
+    
+    
 </resources>
