--- a/limehd/res/values-land/dimens.xml
+++ b/limehd/res/values-land/dimens.xml
@@ -25,4 +25,8 @@
     <dimen name="candidate_number_font_size">14sp</dimen>
     <dimen name="candidate_vertical_padding">4sp</dimen>
     <dimen name="composing_text_size">18sp</dimen>
+    
+    <!-- WB -->
+    <dimen name="wb_key_height">48dip</dimen>
+    
 </resources>
