--- a/limehd/res/xml/lime_english.xml
+++ b/limehd/res/xml/lime_english.xml
@@ -109,7 +109,7 @@
 
     <Row limehd:keyboardMode="@+id/mode_normal" limehd:rowEdgeFlags="bottom">
     	<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
-        <Key limehd:codes="-9" limehd:keyLabel="ABC" limehd:isModifier="true" limehd:keyWidth="10%p" />
+        <Key limehd:codes="-10" limehd:keyLabel="中" limehd:isModifier="true" limehd:keyWidth="10%p" />
         <Key limehd:keyLabel="," limehd:keyWidth="10%p" />
         <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space"
                 limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
@@ -123,7 +123,7 @@
 
     <Row limehd:keyboardMode="@+id/mode_url" limehd:rowEdgeFlags="bottom">
         <Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
-        <Key limehd:codes="-10" limehd:keyLabel="IM" limehd:isModifier="true" limehd:keyWidth="10%p" />
+        <Key limehd:codes="-10" limehd:keyLabel="中" limehd:isModifier="true" limehd:keyWidth="10%p" />
         <Key limehd:keyLabel="@string/popular_domain_0"
                 limehd:keyOutputText="@string/popular_domain_0"
                  limehd:popupKeyboard="@xml/popup_domains"
@@ -141,7 +141,7 @@
 
     <Row limehd:keyboardMode="@+id/mode_email" limehd:rowEdgeFlags="bottom">
     	<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
-        <Key limehd:codes="-10" limehd:keyLabel="IM" limehd:isModifier="true" limehd:keyWidth="10%p" />
+        <Key limehd:codes="-10" limehd:keyLabel="中" limehd:isModifier="true" limehd:keyWidth="10%p" />
         <Key limehd:keyLabel="\@" limehd:keyWidth="10%p"/>
         <Key limehd:keyLabel="@string/popular_domain_0"
                 limehd:keyOutputText="@string/popular_domain_0"
@@ -159,7 +159,7 @@
 
     <Row limehd:keyboardMode="@+id/mode_im" limehd:rowEdgeFlags="bottom">
     	<Key limehd:codes="-3"  limehd:keyIcon="@drawable/sym_keyboard_done" limehd:iconPreview="@drawable/sym_keyboard_feedback_done" limehd:isModifier="true" limehd:keyWidth="15%p" limehd:keyEdgeFlags="left"/>                
-        <Key limehd:codes="-9" limehd:keyLabel="ABC" limehd:isModifier="true" limehd:keyWidth="10%p" />
+        <Key limehd:codes="-10" limehd:keyLabel="中" limehd:isModifier="true" limehd:keyWidth="10%p" />
         <Key limehd:keyLabel="," limehd:keyWidth="10%p"/>
         <Key limehd:codes="32" limehd:keyIcon="@drawable/sym_keyboard_space"
                 limehd:iconPreview="@drawable/sym_keyboard_feedback_space"
