--- a/limehd/res/xml/phone.xml
+++ b/limehd/res/xml/phone.xml
@@ -30,7 +30,7 @@
     >
 
     <Row>
-        <Key limehd:codes="-2" limehd:isModifier="true" limehd:keyLabel="[123]" limehd:keyEdgeFlags="left"/>
+        <Key limehd:codes="-2" limehd:isModifier="true" limehd:keyLabel="123" limehd:keyEdgeFlags="left"/>
         <Key limehd:codes="49" limehd:iconPreview="@drawable/phone_1_l" limehd:keyIcon="@drawable/phone_1"/>
         <Key limehd:codes="50,97,98,99" limehd:iconPreview="@drawable/phone_2_l" limehd:keyIcon="@drawable/phone_2"/>
         <Key limehd:codes="51,100,101,102" limehd:iconPreview="@drawable/phone_3_l" limehd:keyIcon="@drawable/phone_3"/>
