1. Update keyboard layout fixed "," and "." display, 2. Update release notes

--- a/limehd/res/xml/lime_array_shift.xml
+++ b/limehd/res/xml/lime_array_shift.xml
@@ -63,7 +63,7 @@
         <Key limehd:codes="78" limehd:keyLabel="N\n6⇣"/>
         <Key limehd:codes="77" limehd:keyLabel="M\n7⇣"/>
         <Key limehd:codes="60" limehd:keyLabel="&lt;\n8⇣"/>
-        <Key limehd:codes="62" limehd:keyLabel="&gt;\n9⇣"  limehd:popupKeyboard="@xml/popup_c_punctuation"   />
+        <Key limehd:codes="62" limehd:keyLabel="&gt;\n9⇣"   />
         <Key limehd:codes="63" limehd:keyLabel="\?\n0⇣" limehd:keyEdgeFlags="right"/>
     </Row>
 
